to the language modules take place, starting from the stable release
1.3.6.

This branch is also the basis for the unofficial "swig1.3" Debian
package that is available from:
http://www.math.uni-magdeburg.de/~mkoeppe/imo-debian

Eventually this branch will be merged back to the trunk of the CVS
tree (maybe).

Version 1.3.14 (In progress)
============================
08/06/2002: beazley
            Upgraded mzscheme module to support version 201 and added
            overloading support.

08/05/2002: beazley
            Added parsing support for extra grouping (in very limited cases).
            For example:

                    typedef int (FuncPtr)(int, double);

            *** EXPERIMENTAL ***
            
08/03/2002: ljohnson (Lyle Johnson)
            [Ruby] Updates to typemaps.i as those done previously for Perl,
            Python and Tcl modules. Now supports reference types with INPUT,
            OUTPUT and INOUT typemaps.

08/02/2002: beazley
            New library file cstring.i added.  Provides macros for
            manipulating char * data.
 
08/02/2002: beazley
            Deprecated the %new directive.  Use %newobject instead.  For
            example:

               %newobject foo;
               ...
               char *foo();

            %newobject follows the same rules as %rename, %ignore, %feature,
            etc.

            *** POTENTIAL INCOMPATIBILITY ***

08/01/2002: cheetah (William Fulton)
            [Java] New attribute 'jniclassname' for the module directive allows a way of
            changing the JNI class name from the default which uses the modulename with JNI
            appended after it.

                %module (jniclassname="name") modulename

            If 'name' is the same as 'modulename' then the module class name gets changed
            from 'modulename' to modulenameModule.

            Java backwards compatibility summary
            ------------------------------------
