@@ -3,8 +3,7 @@ SWIG       = $(TOP)/../swig
 CXXSRCS	   = example.cxx
 TARGET     = libexample
 INTERFACE  = example.i
-SWIGOPT    = -shadow # -nosync	
-
+SWIGOPT    = -noproxy
 
 all::
 	$(MAKE) -f $(TOP)/Makefile CXXSRCS='$(CXXSRCS)' SWIG='$(SWIG)' \
