@@ -1,5 +1,16 @@
 # This file was created automatically by SWIG.
+# Don't modify this file, modify the SWIG interface instead.
+# This file is compatible with both classic and new-style classes.
 import _example
+import types
+try:
+    _object = types.ObjectType
+    _newclass = 1
+except AttributeError:
+    class _object: pass
+    _newclass = 0
+
+
 cvar = _example.cvar
 print_vars = _example.print_vars
 
